# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py
gendiff/formatters/: json.py
gendiff/scripts/: find_diff.py  gendiff.py  generate_diff.py  parse_file.py  parser.py
tests/: test_gendiff.py
