[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tarvarrs <125196841+tarvarrs@users.noreply.github.com>"]
readme = "README.md"
packages = [
	{ include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.11"
makefile = "^1.1.0"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
