[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tarvarrs <125196841+tarvarrs@users.noreply.github.com>"]
readme = "README.md"
packages = [
	{ include = "gendiff"},
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
makefile = "^1.1.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
