[tool.pdm.build]
includes = [
    "gendiff",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "tarvarrs", email = "125196841+tarvarrs@users.noreply.github.com"},
]
requires-python = "<4.0,>=3.8.1"
dependencies = [
    "makefile<2.0.0,>=1.1.0",
    "flake8<7.0.0,>=6.1.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest",
    "pyyaml<7.0.0,>=6.0.2",
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
gendiff = "gendiff.scripts.generate_diff:main"
